tests/TypingSpec/valid/prog/fun-align-skip-tabs.algst
foo : ∀(a:TU). a -> a
foo a = a
