tests/TypingSpec/invalid/prog/fun-align-4.algst
foo : ∀(a:TU). Int
foo x = 42
